# test_work

./: .gitignore  README.md
1/: CMakeLists.txt
1/src/: main.cpp
2/: CMakeLists.txt
2/src/: generators.h  main.cpp
3/: legacy.c  modern.cpp
4/: CMakeLists.txt
4/src/: geometry.cpp  geometry.h  main.cpp
5/: main.c
